kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-workshop
  annotations:
    external-dns.alpha.kubernetes.io/hostname: itility-us-samen.com
spec:
  selector:
    app: ecsdemo-workshop
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
